# CyberMAN24-RB-Smarthub

./: README.md
exploits/: README.md  exploit_template.py  run_exploit.py
scripts/: change_password.sh  copy_source_code.sh
src/: README.md
src/smarthub/smartconsole/: CMakeLists.txt
src/smarthub/smartconsole/include/: AirQualityMonitor.h  ConsoleManagement.h  DBManager.h  Device.h  Logger.h  Response.h  Room.h  SmartBulb.h  SmartLock.h  User.h  UserDisconnected.h  UserHandler.h  server.h  utils.h
src/smarthub/smartconsole/scripts/: build_run.sh  db_creation.sql
src/smarthub/smartconsole/src/: AirQualityMonitor.cpp  CMakeLists.txt  ConsoleManagemenet.cpp  DBManager.cpp  Device.cpp  Logger.cpp  Response.cpp  Room.cpp  SmartBulb.cpp  SmartLock.cpp  User.cpp  UserDisconnected.cpp  UserHandler.cpp  dvsa.cpp  server.cpp  utils.cpp
src/smarthub/smartwebview/: .env  app.py
src/smarthub/smartwebview/static/: style.css
src/smarthub/smartwebview/static/scripts/: get_devices.js
src/smarthub/smartwebview/templates/: base.html  dashboard.html
